tests/snapshots/cli__ambiguous_edit_piped_errors.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - edit
    - "tag:work"
    - "-n"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: `tag:work` is ambiguous (2 matches):
  [DATE]  Beta  [work]  ([ULID])
  [DATE]  Alpha  [work]  ([ULID])
refine the query or pass a full ULID
