tests/snapshots/cli__delete_non_interactive_without_force_refuses.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - delete
    - 01ARZ3NDEKTSV4RRFFQ69G5FAV
    - "-n"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: refusing to delete [DATE....]  Keep  ([ULID....................]) without --force in non-interactive mode
