tests/snapshots/cli__delete_with_force.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - delete
    - 01ARZ3NDEKTSV4RRFFQ69G5FAV
    - "-f"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
Deleted [DATE....]  Doomed  ([ULID....................])

----- stderr -----
