tests/snapshots/cli__edit_no_match_errors.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - edit
    - 01ARZ3NDEKTSV4RRFFQ69G5FAV
    - "-n"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: no note matches `[ULID]`
