tests/snapshots/cli__edit_no_match_exits_nonzero.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - edit
    - 01ARZ3NDEKTSV4RRFFQ69G5FAV
    - "-n"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
No notes matched your search criteria.
