tests/snapshots/cli__edit_without_selector_lists_like_search.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - edit
    - "-n"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
ID                          DATE        TITLE  TAGS  PATH
[ULID....................]  [DATE....]  Newer        [VAULT]/all-notes/[ULID....................]-newer.md
[ULID....................]  [DATE....]  Older        [VAULT]/all-notes/[ULID....................]-older.md

----- stderr -----
