tests/snapshots/cli__info_print_emits_only_the_vault_path.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - info
    - "--print"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
[VAULT]

----- stderr -----
