tests/snapshots/cli__init_first.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - init
    - vault
---
success: true
exit_code: 0
----- stdout -----
Initialized vault at vault
ignored /by-tag/

----- stderr -----
